--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,9 @@
 .buttons {
   display: flex;
   flex-direction: row;
-  margin-top: 1.5rem;
+  margin: 0 auto;
+  margin-top: 12rem;
 }
-
 .name {
   display: flex;
   flex-direction: row;
@@ -18,6 +18,84 @@
   font-weight: 700;
   color: var(--color-primary);
 }
+
+.title {
+  letter-spacing: 0.25rem;
+  font-size: 1.5rem;
+}
+.title a:first-child {
+  font-weight: 500;
+  position: relative;
+  display: inline-block;
+  padding: 0.3rem;
+  font-size: 1.5rem;
+  color: var(--color-primary);
+}
+
+.title > a:first-child:hover {
+  color: var(--color-logo);
+}
+
+/* .title > a:first-child:hover .title > a:first-child::after {
+  transform: translateX(0%);
+  opacity: 0;
+} */
+
+.title a:nth-child(2) {
+  font-weight: 500;
+  position: relative;
+  display: inline-block;
+  padding: 0.3rem;
+  font-size: 1.5rem;
+  color: var(--color-logo);
+}
+.title > a:nth-child(2)::after {
+  content: "";
+  position: absolute;
+  left: 0.5rem;
+  bottom: -0.2rem;
+  height: 3px;
+  width: 9.5rem;
+  background: var(--color-primary);
+  /* transform: translateX(-100%);
+  opacity: 0; */
+  transition: var(--transition);
+}
+.title > a:nth-child(2):hover {
+  color: var(--color-primary);
+}
+/* .title > a:hover .title > a:nth-child(2)::after {
+  transform: translateX(100%);
+  opacity: 1;
+} */
+.title a:nth-child(3) {
+  font-weight: 500;
+  display: inline-block;
+  position: relative;
+  padding: 0.3rem;
+  font-size: 1.5rem;
+  color: var(--color-logo);
+}
+.title > a:nth-child(3):hover {
+  color: var(--color-primary);
+}
+.title > a:nth-child(3)::after {
+  content: "";
+  position: absolute;
+  left: 0.5rem;
+  bottom: -0.2rem;
+  height: 3px;
+  width: 8rem;
+  background: var(--color-primary);
+  /* transform: translateX(-100%);
+  opacity: 0; */
+  transition: var(--transition);
+}
+/* .title > a:hover .title > a:nth-child(2)::after {
+  transform: translateX(100%);
+  opacity: 1;
+} */
+
 .wrapper {
   display: flex;
   flex-direction: row;
@@ -27,9 +105,10 @@
 .header__container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   width: fit-content;
+  height: 100%;
   padding-right: 1rem;
   padding-left: 3rem;
 }
@@ -59,10 +138,11 @@
 
 .header__socials > a {
   display: block;
+  color: var(--color-primary);
 }
 
 .header__socials > a:hover {
-  color: var(--color-primary);
+  color: var(--color-logo);
 }
 @media screen and (max-width: 1024px) {
   .wrapper {
@@ -82,7 +162,16 @@
   .header__container {
     margin-top: 3rem;
   }
+  .img__container {
+    margin-top: 3rem;
+  }
   .header__socials::after {
+    display: none;
+  }
+  .buttons {
+    margin-top: 1.5rem;
+  }
+  .title > a::after {
     display: none;
   }
 }
