--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,9 @@ a:hover {
   color: var(--color-white);
   font-size: 1rem;
   padding: 0.75rem 1.25rem;
-  margin: 0.4rem 0.75rem;
+  padding-right: 1.5rem;
+
+  margin: 0.4rem 1rem;
   margin-left: 0;
   border-radius: 0.4rem;
   cursor: pointer;
