--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -58,6 +58,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: row;
+  gap: 1rem;
 }
 .card-icon > a {
   --size: 4rem;
