--- a/src/components/shared/ListingCard.css
+++ b/src/components/shared/ListingCard.css
@@ -3,22 +3,118 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
-  width: 40ch;
-  height: 40ch;
+  gap: 1rem;
+  width: 45ch;
+  height: 45ch;
+
+  overflow: hidden;
   background: #a5c4ff;
+  border-radius: 1rem;
+  transition: var(--transition);
+}
+
+.skill-title {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem 1.5rem;
+  margin: 0 auto;
+  transform: translateY(190%);
+  transition: var(--transition);
+}
+.skill-title::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  background: #a5c4ff;
+  transition: var(--transition);
+  transform-origin: left;
+  transform: translatex(-100%);
 }
 .skill-list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-content: flex-start;
   gap: 0.5rem 2rem;
-  padding: 0 1rem;
+  padding: 0.5rem;
+  transform: translateY(320%);
+  transition: var(--transition);
 }
+
 .skill-item {
   display: block;
+}
+.skill-item > h5 {
+  padding: 0.25rem 2rem;
 }
 .content {
   display: flex;
   flex-direction: row;
+  gap: 1rem;
+}
+.content-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content-icon:first-child {
+  color: var(--color-primary);
+  background-size: cover;
+  font-size: 1.5rem;
+}
+@media (hover) {
+  .skill-box:hover {
+    box-shadow: 4px 2px 2px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+  }
+  .skill-box:hover .skill-title,
+  .skill-box:focus-within .skill-title {
+    transform: translateY(0%);
+  }
+  .skill-box:hover .skill-title::after,
+  .skill-box:focus-within .skill-title::after {
+    transform: translatex(0%);
+
+    bottom: 0;
+    background: var(--color-primary);
+  }
+  .skill-box:hover .skill-list,
+  .skill-box:focus-within .skill-list {
+    transform: translateY(0%);
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .skill-box {
+    width: 50ch;
+    justify-content: center;
+  }
+
+  .skill-title {
+    padding: 1rem;
+
+    transform: translateY(0%);
+  }
+  .skill-list {
+    transform: translateY(0%);
+  }
+}
+@media screen and (max-width: 600px) {
+  .skill-box {
+    width: 35ch;
+    justify-content: center;
+  }
+
+  .skill-title {
+    padding: 1rem;
+
+    transform: translateY(0%);
+  }
+  .skill-list {
+    transform: translateY(0%);
+  }
 }
