--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -3,6 +3,12 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 1rem auto;
+  margin: 1.5rem auto;
+  padding: 0 2rem;
   gap: 1.5rem;
+}
+@media screen and (max-width: 1024px) {
+  .skill-container {
+    flex-direction: column;
+  }
 }
