--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,11 +1,16 @@
+#skills {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .skill-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 1.5rem auto;
   padding: 0 2rem;
   gap: 1.5rem;
+  width: 100%;
 }
 @media screen and (max-width: 1024px) {
   .skill-container {
