--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,86 @@
 .footer-container {
-  height: 20rem;
+  height: auto;
   background: hsla(208, 75%, 42%, 0.839);
+  padding-bottom: 4rem;
+  width: 100%;
+}
+.footer-list {
+  display: flex;
+  padding: 1.5rem 8rem;
+  padding-bottom: 0;
+  margin: 0.5rem auto;
+}
+.footer-container > h2 {
+  font-size: 1rem;
+  padding: 1.5rem;
+}
+.footer-container > h2 > svg {
+  font-size: 1.5rem;
+}
+.list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 1.5rem;
+  align-items: flex-start;
+}
+.list > h2 {
+  font-size: 1.5rem;
+}
+.items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.copy-right {
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: 1.5rem;
+  padding-right: 4rem;
+}
+.copy-right > svg {
+  margin: 0 0.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+  }
+  .list:last-child {
+    display: none;
+  }
+  .list {
+    height: fit-content;
+  }
+  .copy-right {
+    padding-right: 2rem;
+  }
+}
+
+/* ========Media Queries for phones (small size devices)====== */
+@media screen and (max-width: 600px) {
+  .footer-container {
+    width: 100%;
+  }
+  .footer-list {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .list {
+    align-items: center;
+    justify-content: center;
+  }
+  .list:nth-child(4) {
+    display: none;
+  }
 }
