--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,3 +1,9 @@
+#header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
 .buttons {
   display: flex;
   flex-direction: row;
@@ -150,6 +156,7 @@
   }
   .section {
     margin-bottom: 5rem;
+    background: url(../../assets/HomeImage.svg);
   }
   .header__socials {
     flex-direction: row;
@@ -163,7 +170,7 @@
     margin-top: 3rem;
   }
   .img__container {
-    margin-top: 3rem;
+    display: none;
   }
   .header__socials::after {
     display: none;
@@ -173,5 +180,11 @@
   }
   .title > a::after {
     display: none;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header__container .title > a {
+    font-size: 1rem;
+    letter-spacing: 0;
   }
 }
