--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -127,6 +127,7 @@
   .contact-container {
     flex-direction: column;
     margin: 1rem auto !important;
+    padding: 0 2rem;
     gap: 0;
   }
   .content-container::before {
