--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -166,6 +166,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0.5rem 1rem;
   }
   .about__container {
     padding: 0;
