--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -35,7 +35,7 @@
   margin: 0 auto;
   gap: 0.5rem 0;
   width: 100%;
-  background: var(--color-nav);
+  background: var(--color-navactive);
   padding: 1rem 1.5rem;
 }
 .form .btn {
@@ -63,7 +63,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background: var(--color-nav);
+  background: var(--color-navactive);
   width: max-content;
 }
 
@@ -75,7 +75,7 @@
   border-radius: 0.5rem;
   width: 100%;
   padding: 0 1rem;
-  background: var(--color-nav);
+  background: var(--color-navactive);
   transition: var(--transition);
   height: 100%;
 }
@@ -83,6 +83,7 @@
 .contact-option > a {
   color: var(--color-primary);
   font-size: 1rem;
+  padding: 0.5rem;
 }
 .contact-option > h5 {
   font-size: 1rem;
