--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
   margin: 0 auto;
+  padding-top: 2rem;
 }
 .buttons {
   display: flex;
