--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -9,7 +9,7 @@
   flex-direction: row;
   position: relative;
   justify-content: center;
-  padding: 0 4rem;
+  padding: 2rem 4rem;
   width: 100%;
 }
 .contact-wrapper {
@@ -35,7 +35,6 @@
   margin: 0 auto;
   gap: 0.5rem 0;
   width: 100%;
-  background: var(--color-navactive);
   padding: 1rem 1.5rem;
 }
 .form .btn {
@@ -44,17 +43,27 @@
   padding: 1rem 2rem;
   font-size: 1.5rem;
 }
+form > input {
+  font-size: 1.5rem;
+}
+form > textarea {
+  font-size: 1.5rem;
+}
 .form-input {
   width: 80%;
-  height: 2.5rem;
+  height: 3.5rem;
   border: 1px solid var(--color-primary);
   border-radius: 0.5rem;
   padding: 1rem 1.5rem;
+  background: var(--color-background);
 }
 .message {
   width: 100%;
   border: 1px solid var(--color-primary);
   border-radius: 0 0.5rem 0.5rem 0;
+  padding: 1rem 1.5rem;
+
+  background: var(--color-background);
 }
 .content-container {
   display: flex;
@@ -63,7 +72,6 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background: var(--color-navactive);
   width: max-content;
 }
 
@@ -75,19 +83,19 @@
   border-radius: 0.5rem;
   width: 100%;
   padding: 0 1rem;
-  background: var(--color-navactive);
   transition: var(--transition);
   height: 100%;
 }
-
+.contact-option > * {
+  font-size: 1rem;
+  color: var(--color-light);
+}
 .contact-option > a {
   color: var(--color-primary);
   font-size: 1rem;
   padding: 0.5rem;
 }
-.contact-option > h5 {
-  font-size: 1rem;
-}
+
 .contact-option > svg {
   color: var(--color-primary);
   font-size: 3rem;
@@ -104,7 +112,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 4rem;
+    padding: 2rem 4rem 4rem 1rem;
     gap: 0;
   }
   .content-container {
@@ -150,6 +158,12 @@
   }
   .form .btn {
     padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+  }
+  form > input {
+    font-size: 1rem;
+  }
+  form > textarea {
     font-size: 1rem;
   }
 }
