--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,11 +1,38 @@
 #header {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0 auto;
-  padding-top: 2rem;
+  background: var(--color-logo);
 }
+
+/* Shape Divider start */
+
+.custom-shape-divider-bottom-1649547168 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1649547168 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 93px;
+}
+
+.custom-shape-divider-bottom-1649547168 .shape-fill {
+  fill: var(--color-header);
+}
+
+/* Shape Divider END */
+
 .buttons {
   display: flex;
   flex-direction: row;
@@ -19,30 +46,40 @@
 }
 .name > h1 {
   font-size: 2rem;
-  font-weight: 700;
+  font-weight: 400;
+  color: var(--color-background);
 }
 .name > h2 {
   font-size: 2rem;
-  font-weight: 700;
+  font-weight: 400;
   color: var(--color-primary);
 }
-
+h5 {
+  color: var(--color-background);
+}
+.title-container {
+  padding-top: 6rem;
+}
 .title {
-  letter-spacing: 0.25rem;
+  letter-spacing: 0rem;
+  display: flex;
+  justify-content: center;
   font-size: 1.5rem;
 }
 .title a:first-child {
-  font-weight: 500;
+  font-family: Ubuntu;
+  font-weight: 700;
   position: relative;
   display: inline-block;
-  padding: 0.3rem;
-  font-size: 1.5rem;
+  padding: 0 0.3rem;
+  font-size: 3.5rem;
+  letter-spacing: 0;
   color: var(--color-primary);
 }
 
-.title > a:first-child:hover {
+/* .title > a:first-child:hover {
   color: var(--color-logo);
-}
+} */
 
 /* .title > a:first-child:hover .title > a:first-child::after {
   transform: translateX(0%);
@@ -50,14 +87,17 @@
 } */
 
 .title a:nth-child(2) {
-  font-weight: 500;
+  font-family: Ubuntu;
+  font-weight: 700;
   position: relative;
   display: inline-block;
-  padding: 0.3rem;
-  font-size: 1.5rem;
-  color: var(--color-logo);
+  padding: 0 0.5rem;
+  font-size: 3.5rem;
+  letter-spacing: 0;
+  color: var(--color-background);
 }
-.title > a:nth-child(2)::after {
+
+/* .title > a:nth-child(2)::after {
   content: "";
   position: absolute;
   left: 0.5rem;
@@ -65,10 +105,10 @@
   height: 3px;
   width: 9.5rem;
   background: var(--color-primary);
-  /* transform: translateX(-100%);
-  opacity: 0; */
   transition: var(--transition);
-}
+} 
+*/
+
 .title > a:nth-child(2):hover {
   color: var(--color-primary);
 }
@@ -87,7 +127,7 @@
 .title > a:nth-child(3):hover {
   color: var(--color-primary);
 }
-.title > a:nth-child(3)::after {
+/* .title > a:nth-child(3)::after {
   content: "";
   position: absolute;
   left: 0.5rem;
@@ -95,10 +135,8 @@
   height: 3px;
   width: 8rem;
   background: var(--color-primary);
-  /* transform: translateX(-100%);
-  opacity: 0; */
   transition: var(--transition);
-}
+} */
 /* .title > a:hover .title > a:nth-child(2)::after {
   transform: translateX(100%);
   opacity: 1;
@@ -109,23 +147,21 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 3rem;
 }
 .header__container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   width: fit-content;
   height: 100%;
   padding-right: 1rem;
-  padding-left: 3rem;
 }
 .img__container {
   display: block;
-  width: 30rem;
   height: auto;
   /* margin: 0 1rem; */
-  margin-top: 4rem;
   overflow: hidden;
 }
 .header__socials {
@@ -141,11 +177,12 @@
   content: " ";
   width: 2px;
   height: 4rem;
-  background: var(--color-primary);
+  background: var(--color-header);
 }
 
 .header__socials > a {
   display: block;
+  font-size: 1.5rem;
   color: var(--color-primary);
 }
 
@@ -158,7 +195,7 @@
   }
   .section {
     margin-bottom: 5rem;
-    background: url(../../assets/HomeImage.svg);
+    background: url(../../assets/home-avatar-bg.svg);
   }
   .header__socials {
     flex-direction: row;
@@ -170,6 +207,10 @@
   }
   .header__container {
     margin-top: 3rem;
+  }
+  .title-container .title > a {
+    font-size: 3.5rem;
+    letter-spacing: 0;
   }
   .img__container {
     display: none;
@@ -183,10 +224,17 @@
   .title > a::after {
     display: none;
   }
+  .title-container {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
 }
 @media screen and (max-width: 600px) {
   .header__container .title > a {
-    font-size: 1rem;
+    font-size: 2.5rem;
     letter-spacing: 0;
+  }
+  #header {
+    height: 70vh;
   }
 }
