--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   height: auto;
-  background: var(--color-nav);
+  background: var(--color-header);
   padding-bottom: 4rem;
   width: 100%;
 }
@@ -26,23 +26,32 @@
 }
 .list > h2 {
   font-size: 1.5rem;
+  color: var(--color-white);
 }
 .items {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  color: var(--color-light);
+}
+.items > h5 {
+  color: var(--color-light);
 }
 .copy-right {
   display: flex;
   justify-content: flex-end;
   padding-bottom: 1.5rem;
   padding-right: 4rem;
+  color: var(--color-light);
 }
 .copy-right > svg {
   margin: 0 0.5rem;
   justify-content: center;
   align-items: center;
+}
+.copy-right > h2:last-child {
+  color: var(--color-primary);
 }
 
 @media screen and (max-width: 1024px) {
@@ -50,7 +59,6 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
-    align-items: center;
   }
   .list:last-child {
     display: none;
@@ -82,5 +90,8 @@
   }
   .list:nth-child(4) {
     display: none;
+  }
+  .items {
+    align-items: center;
   }
 }
