--- a/src/components/shared/ListingCard.css
+++ b/src/components/shared/ListingCard.css
@@ -7,10 +7,10 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  width: 50ch;
+  width: 45ch;
   height: 45ch;
   overflow: hidden;
-  background: #a5c4ff;
+  background: var(--color-black-light);
   border-radius: 1rem;
   transition: var(--transition);
 }
@@ -22,10 +22,14 @@
   justify-content: center;
   padding: 1.5rem 1.5rem;
   margin: 0 auto;
+  gap: 1rem;
   transform: translateY(190%);
   transition: var(--transition);
 }
-
+.skill-title > h1 {
+  color: var(--color-background);
+  transition: var(--transition);
+}
 /* To underline the title */
 /* .skill-title::after {
   content: "";
@@ -41,14 +45,18 @@
 } */
 .skill-list {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   justify-content: center;
+  gap: 2rem;
   padding: 0.5rem;
   width: fit-content;
   transform: translateY(320%);
   transition: var(--transition);
 }
-
+.skill-list > img {
+  width: 6rem;
+  height: 6rem;
+}
 .skill-item {
   display: flex;
   flex-direction: column;
@@ -75,6 +83,8 @@
 @media (hover) {
   .skill-box:hover {
     box-shadow: 4px 2px 2px rgba(0, 0, 0, 0.2);
+    background: var(--color-logo);
+
     transform: scale(1.05);
   }
   .skill-box:hover::after,
@@ -97,6 +107,9 @@
     bottom: 0;
     background: var(--color-primary);
   } */
+  .skill-box:hover .skill-title > h1 {
+    color: var(--color-white);
+  }
   .skill-box:hover .skill-list,
   .skill-box:focus-within .skill-list {
     transform: translateY(0%);
@@ -112,8 +125,8 @@
     content: "";
     display: block;
     position: absolute;
-    border-top: 3px solid var(--color-logo);
-    border-bottom: 3px solid var(--color-logo);
+    border-top: 3px solid var(--color-white);
+    border-bottom: 3px solid var(--color-white);
     transition: var(--transition);
     transform: translateX(120%);
     transform-origin: left;
@@ -126,8 +139,8 @@
     content: "";
     display: block;
     position: absolute;
-    border-right: 3px solid var(--color-logo);
-    border-left: 3px solid var(--color-logo);
+    border-right: 3px solid var(--color-white);
+    border-left: 3px solid var(--color-white);
     transition: var(--transition);
     transform: translateY(120%);
     transform-origin: top;
@@ -143,7 +156,7 @@
   }
   .skill-list {
     transform: translateY(0%);
-    gap: 0;
+    gap: 1.5rem;
   }
 }
 @media screen and (max-width: 600px) {
@@ -159,6 +172,7 @@
     transform: translateY(0%);
   }
   .skill-list {
+    gap: 0.5rem;
     transform: translateY(0%);
   }
 }
